--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tax-loss-harvesting",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sakethreddy10.github.io/tax-loss-harvesting",
+  "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
